# AVD

./: README.md
faiss_clustering/: CMakeLists.txt  README.md  main.cpp
knn_bf/: CMakeLists.txt  README.md  hnsw.vcxproj  hnsw.vcxproj.filters
knn_bf/src/: main.cpp
